fixed validation on user update and create to handle empty strings as null